Minor repo info update

--- a/config/params.yaml
+++ b/config/params.yaml
@@ -1,3 +1,7 @@
+#  @author Matteo Caruso
+#  @email matteo.caruso@phd.units.it
+#  @email matteo.caruso1993@gmail.com
+
 delta_x_speed: .1
 delta_y_speed: .1
 delta_theta_speed: 0.05
